--- a/.github/workflows/reusable.yaml
+++ b/.github/workflows/reusable.yaml
@@ -30,6 +30,6 @@ jobs:
         run: echo "Hello, ${{ inputs.who-to-greet }}!"
       - name: Set outputs
         id: set-outputs
-        run: echo "::set-output name=greeting::Hello, ${{ inputs.who-to-greet }}!" && echo "::set-output name=current-time::$(date)"
+        run: echo "greeting=Hello, ${{ inputs.who-to-greet }}" >> $GITHUB_ENV && echo "current-time=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_ENV
       - name: use outputs
         run: echo "The greeting is ${{ steps.set-outputs.outputs.greeting }} and the current time is ${{ steps.set-outputs.outputs.current-time }}"
