--- a/.github/workflows/list-files.yaml
+++ b/.github/workflows/list-files.yaml
@@ -16,3 +16,15 @@ jobs:
         run: echo Hello, world!
       - name: List files in repo
         run: tree .
+
+  call-workflow:
+    uses: ./.github/workflows/reusable.yaml
+    with:
+      who-to-greet: 'Mona'
+
+  read-output:
+    runs-on: ubuntu-latest
+    needs: call-workflow
+    steps:
+      - name: Read outputs
+        run: echo "The greeting is ${{ needs.call-workflow.outputs.greeting }} and the current time is ${{ needs.call-workflow.outputs.current-time }}"
