--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: main
   workflow_dispatch:
     inputs:
-        environmnet:
+        environment:
           description: 'Environment to deploy to'
           type: environment
           required: true
@@ -33,7 +33,7 @@ jobs:
       - run: echo "Testing..."
       - run: sleep 15
   
-  productions:
+  production:
     runs-on: ubuntu-latest
     needs:
       - load-test
