--- a/.github/workflows/list-files.yaml
+++ b/.github/workflows/list-files.yaml
@@ -1,12 +1,13 @@
 name: List files
 
 on:
+  push:
+    branches: main
   workflow_dispatch:
 
 jobs:
   list:
-    environment: prod
-    runs-on: ubuntu-latest
+    runs-on: clemens
     
     steps:
       - uses: actions/checkout@v4
@@ -14,15 +15,5 @@ jobs:
         run: echo Hello, world!
       - name: List files in repo
         run: tree .
-
-  call-workflow:
-    uses: ./.github/workflows/reusable.yaml
-    with:
-      who-to-greet: 'Mona'
-
-  read-output:
-    runs-on: ubuntu-latest
-    needs: call-workflow
-    steps:
-      - name: Read outputs
-        run: echo "The greeting is ${{ needs.call-workflow.outputs.greeting }} and the current time is ${{ needs.call-workflow.outputs.current-time }}"
+      - name: List files in repo
+        run: ls /
